[package]
name = "rogue"
version = "0.1.0"
publish = false
authors = ["Robert O'Shea <robertosheagamedev@gmail.com>"]
edition = "2021"
exclude = ["assets"]

[dependencies]
bevy = { version = "0.15.1" }
bevy_asset_loader = "0.22.0"
bevy_ecs_tilemap = "0.15.0"
bevy_egui = "0.32.0"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = ["bevy/dynamic_linking"]
